* Current version
** [2021-02-12 Fri 14:07]: incorporated binary 'linking' variables 
** [2021-02-12 Fri 12:57]: added a simple BDD to MIP function (no weights)