@@ -1,0 +1,10 @@
+N=4
+vars=1,2,3
+0:1,2:12,0.12
+1:3,4:34,0.34
+2:4,5:45,0.45
+3:-1,-1:30,0.30
+4:-1,-2:40,0.40
+5:-2,-1:50,0.50
+-2:None,None:0,0
+-1:None,None:0,0
